fix front end style

--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -30,7 +30,7 @@
         <div class="payment-method-second-col billing-address-form">
             <form class="bg-white px-8 pt-6 pb-8">
                     <div class="mb-4">
-                        <label id="cc-name-label" class="block text-gray-700 text-sm font-bold mb-2">
+                        <label id="cc-name-label" class="text-gray-700 text-sm font-bold">
                             Cardholder Name
                         </label>
                         <div id="cc-name-wrapper"
@@ -40,7 +40,7 @@
                     </div>
 
                     <div class="mb-4">
-                        <label id="cc-number-label" class="block text-gray-700 text-sm font-bold mb-2">
+                        <label id="cc-number-label" class="text-gray-700 text-sm font-bold">
                             Card Number
                         </label>
                         <div id="cc-number-wrapper"
@@ -52,7 +52,7 @@
                     <div class="mb-6">
                         <div class="grid grid-cols-2 gap-4">
                             <div class="col-span-1">
-                                <label id="cc-expiry-label" class="block text-gray-700 text-sm font-bold mb-2">
+                                <label id="cc-expiry-label" class="text-gray-700 text-sm font-bold">
                                     Expiry Date
                                 </label>
                                 <div id="cc-expiry-wrapper"
@@ -61,7 +61,7 @@
                                 <p id="cc-expiry-error"  class="text-red-500 text-xs italic mt-1"></p>
                             </div>
                             <div class="col-span-1">
-                                <label id="cc-cvc-label" class="block text-gray-700 text-sm font-bold mb-2">
+                                <label id="cc-cvc-label" class="text-gray-700 text-sm font-bold">
                                     CVC
                                 </label>
                                 <div id="cc-cvc-wrapper"
