--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -50,6 +50,12 @@
                                                                     </item>
                                                                 </item>
                                                             </item>
+                                                            <item name="grand-total" xsi:type="array">
+                                                                <item name="component" xsi:type="string">Buckaroo_Magento2/js/view/checkout/summary/grand-total</item>
+                                                                <item name="config" xsi:type="array">
+                                                                    <item name="title" xsi:type="string" translate="true">Order Total</item>
+                                                                </item>
+                                                            </item>
                                                         </item>
                                                     </item>
                                                 </item>
