--- a/view/frontend/web/template/checkout/summary/remaining-amount.html
+++ b/view/frontend/web/template/checkout/summary/remaining-amount.html
@@ -1,6 +1,5 @@
-<!-- app/code/Buckaroo/Magento2/view/frontend/web/template/checkout/summary/remaining-amount.html -->
 <!-- ko if: isDisplayed() -->
-<tr class="totals remaining-amount">
+<tr class="grand totals remaining-amount">
     <th class="mark" scope="row">
         <strong data-bind="i18n: title"></strong>
     </th>
