--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -18,6 +18,9 @@
  * @license   https://tldrlegal.com/license/mit-license
  -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <css src="Buckaroo_Magento2::css/ideal-fast-checkout.css" />
+    </head>
     <body>
         <referenceContainer name="product.info.main">
             <block class="Buckaroo\Magento2\Block\Catalog\Product\View\Applepay" name="buckaroo_magento2.product.info.applepay"
