--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -1,3 +1,25 @@
+<?php
+/**
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the MIT License
+ * It is available through the world-wide-web at this URL:
+ * https://tldrlegal.com/license/mit-license
+ * If you are unable to obtain it through the world-wide-web, please send an email
+ * to support@buckaroo.nl so we can send you a copy immediately.
+ *
+ * DISCLAIMER
+ *
+ * Do not edit or add to this file if you wish to upgrade this module to newer
+ * versions in the future. If you wish to customize this module for your
+ * needs please contact support@buckaroo.nl for more information.
+ *
+ * @copyright Copyright (c) Buckaroo B.V.
+ * @license   https://tldrlegal.com/license/mit-license
+ */
+
+/** @var string $cspNonce */
+?>
 <div id="buckaroo_magento2_payconiq_loader" class="loading-mask"></div>
 
 <div id="buckaroo_magento2_payconiq_container">
@@ -10,11 +32,9 @@
     </div>
 </div>
 
-<?php
-    $key = $block->getTransactionKey();
-    $script = <<<JS
+<script nonce="<?= $cspNonce ?>">
     require(['buckaroo/payconiq/pay'], function (payconiqPay) {
-        var transactionKey = "$key";
+        var transactionKey = "<?= /* @noEscape */ $block->getTransactionKey(); ?>";
 
         payconiqPay.setTransactionKey(transactionKey);
         payconiqPay.showQrCode();
@@ -24,6 +44,4 @@
             payconiqPay.cancelPayment();
         });
     }
-JS;
-?>
-<?= /* @noEscape */ $secureRenderer->renderTag('script', [], $script, false); ?>
+</script>
