--- a/view/frontend/templates/catalog/product/view/applepay.phtml
+++ b/view/frontend/templates/catalog/product/view/applepay.phtml
@@ -18,7 +18,7 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 ?>
-<?php if ($block->canShowProductButton()): ?>
+<?php if ($block->canShowButton('Product')): ?>
 <div id="apple-pay-catalog-product-view-component" data-bind="scope:'applepayproductcomponent'">
     <!-- ko template: getTemplate() --><!-- /ko -->
 
