--- a/view/frontend/templates/checkout/cart/applepay.phtml
+++ b/view/frontend/templates/checkout/cart/applepay.phtml
@@ -18,7 +18,7 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 ?>
-<?php if ($block->canShowButton()): ?>
+<?php if ($block->canShowButton('Cart')): ?>
 <div class="box-tocart">
     <div class="fieldset">
         <div class="actions">
