--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
@@ -178,7 +178,7 @@
                             <span>
                                 <a target="_blank"
                                    data-bind="
-                                       i18n: 'Yes, I accept the terms and condition for the use of Riverty.',
+                                       i18n: 'The general Terms and Conditions for the Riverty payment method apply. The privacy policy of Riverty can be found here.',
                                        attr: { 'href': termsUrl }
                                    ">
                                 </a>
