--- a/view/frontend/templates/catalog/product/view/ideal-fast-checkout.phtml
+++ b/view/frontend/templates/catalog/product/view/ideal-fast-checkout.phtml
@@ -34,6 +34,7 @@ if ($block->canShowButton('Product')): ?>
                     "components": {
                         "fastCheckoutIdeal": {
                             "component":"buckaroo/ideal-fast-checkout/pay",
+                            "template":"Buckaroo_Magento2/catalog/product/view/ideal-fast-checkout",
                             "config": {
                                 "page": "product",
                                 "paymentData": {
