change google analytics link

--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -103,7 +103,7 @@
 
         <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
             <a href="https://docs.buckaroo.io/v1/docs/google-analytics-module" target="_blank" rel="noopener" class="bk-plugin-zone bk-flex-basis-50">
-                <img src="https://www.buckaroo.nl/media/3478/magento2_googleanalytics_icon.png" alt="<?= $block->escapeHtml('Analytics module');?>">
+                <img src="https://files.readme.io/d723d3567a5aeec402effc4201819d329ddbcd922697f8cf391c1e25ca31a65d-magento2_googleanalytics_icon.png" alt="<?= $block->escapeHtml('Analytics module');?>">
             </a>
             <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Improves tracking allocation across various devices and browsers'));?></p>
         </div>
