--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -89,35 +89,35 @@
     <div class="bk-flex bk-mb-5px bk-flex-wrap">
         <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
             <a href="https://github.com/buckaroo-it/Magento2_SecondChance" target="_blank" rel="noopener" class="bk-plugin-zone bk-flex-basis-50">
-                <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/68ba0c08-1162-44c6-a18a-8734692b8b02" alt="<?= $block->escapeHtml('Second chance module');?>">
+                <img src="https://www.buckaroo.nl/media/n2qpue0z/magento2_secondchance_icon.png" alt="<?= $block->escapeHtml('Second chance module');?>">
             </a>
             <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('The Second Chance module makes it possible to follow up unpaid orders with one or two reminder emails. This extension to the Buckaroo Payment module ensures a higher conversion rate.'));?></p>
         </div>
 
         <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
             <a href="https://docs.buckaroo.io/docs/magento-old-hyva-checkout-module" target="_blank" rel="noopener" class="bk-plugin-zone bk-flex-basis-50">
-                <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/b00d2fcd-2458-4a8b-ab1f-e85d678a0008" alt="<?= $block->escapeHtml('Hyvä Checkout module');?>">
+                <img src="https://www.buckaroo.nl/media/33gf24ru/magento2_hyvacheckout_icon.png" alt="<?= $block->escapeHtml('Hyvä Checkout module');?>">
             </a>
             <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('We have seamlessly incorporated support for Hyvä Checkout, enhancing your payment experience with Buckaroo while enjoying quicker loading times.'));?></p>
         </div>
 
         <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
             <a href="https://docs.buckaroo.io/v1/docs/google-analytics-module" target="_blank" rel="noopener" class="bk-plugin-zone bk-flex-basis-50">
-                <img src="https://files.readme.io/d723d3567a5aeec402effc4201819d329ddbcd922697f8cf391c1e25ca31a65d-magento2_googleanalytics_icon.png" alt="<?= $block->escapeHtml('Analytics module');?>">
+                <img src="https://www.buckaroo.nl/media/osphsp1u/magento2_googleanalytics_icon.png" alt="<?= $block->escapeHtml('Analytics module');?>">
             </a>
             <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Improves tracking allocation across various devices and browsers'));?></p>
         </div>
 
         <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
             <a href="https://docs.buckaroo.io/docs/hyva-react-checkout-module" target="_blank" rel="noopener" class="bk-plugin-zone bk-flex-basis-50">
-                <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/11953f16-3f5d-4c10-bb6b-f9a949a97a7a" alt="<?= $block->escapeHtml('Hyvä React Checkout module');?>">
+                <img src="https://www.buckaroo.nl/media/iyvnqp2k/magento2_hyvareactcheckout_icon.png" alt="<?= $block->escapeHtml('Hyvä React Checkout module');?>">
             </a>
             <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Hyvä offers the best performance and user experience, without the cost and overhead of a PWA.'));?></p>
         </div>
 
         <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
             <a href="https://docs.buckaroo.io/docs/graphql-module" target="_blank" rel="noopener" class="bk-plugin-zone bk-flex-basis-50">
-                <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/8611dfeb-bb84-4ba6-ab72-7b6459143dff" alt="<?= $block->escapeHtml('GraphQL');?>">
+                <img src="https://www.buckaroo.nl/media/w0sdhkjd/magento2_graphql_icon.png" alt="<?= $block->escapeHtml('GraphQL');?>">
             </a>
             <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Buckaroo GraphQL module adds GraphQL to provide an alternative to REST and SOAP web APIs for frontend development.'));?></p>
         </div>
