remove dependency for CSP module and remove require scripts from phtml replaced with magento UI

--- a/view/frontend/templates/cart/buckaroo_config.phtml
+++ b/view/frontend/templates/cart/buckaroo_config.phtml
@@ -18,11 +18,11 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 
-/** @var string $cspNonce */
+/** @var string $block */
 ?>
 <div id="buckaroo-fee-cart" data-bind="scope:'buckarooFeeCart'">
     <!-- ko template: getTemplate() --><!-- /ko -->
-    <script nonce="<?= $block->getCspNonce() ?>">
+    <script>
         window.buckarooConfig = <?= /* @noEscape */ $block->getBuckarooConfigJson(); ?>;
     </script>
 </div>
