--- a/view/frontend/templates/catalog/product/view/ideal-fast-checkout.phtml
+++ b/view/frontend/templates/catalog/product/view/ideal-fast-checkout.phtml
@@ -19,6 +19,8 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 
+/** @var string $block */
+
 if ($block->canShowButton('Product')): ?>
 
     <div id="fast-checkout-ideal-btn-component" data-bind="scope: 'fastCheckoutIdeal'">
