--- a/view/frontend/templates/catalog/product/view/idin.phtml
+++ b/view/frontend/templates/catalog/product/view/idin.phtml
@@ -17,6 +17,7 @@
  * @copyright Copyright (c) Buckaroo B.V.
  * @license   https://tldrlegal.com/license/mit-license
  */
+/** @var string $block */
 ?>
 <?php if ($block->canShowProductIdin()): ?>
     <div id="buckaroo_idin_product" style="background: #d4eded; padding: 10px; display: inline-block; width: 100%; ">
