--- a/view/frontend/templates/catalog/product/view/paypal-express.phtml
+++ b/view/frontend/templates/catalog/product/view/paypal-express.phtml
@@ -17,6 +17,7 @@
  * @copyright Copyright (c) Buckaroo B.V.
  * @license   https://tldrlegal.com/license/mit-license
  */
+/** @var string $block */
 ?>
 <?php if ($block->canShowButton('Product')): ?>
 <div id="paypal-express-button-component" data-bind="scope:'paypalExpress'">
@@ -30,7 +31,10 @@
                         "paypalExpress": {
                             "component":"buckaroo/paypal-express/button",
                             "template":"Buckaroo_Magento2/catalog/product/view/paypal-express",
-                            "data":  <?= /* @noEscape */ json_encode($block->getConfig()); ?>
+                            "config": {
+                                  "data": <?= /* @noEscape */ json_encode($block->getConfig()); ?>,
+                                  "page": "product"
+                            }
                         }
                     }
                 }
