--- a/view/frontend/templates/checkout/cart/paypal-express.phtml
+++ b/view/frontend/templates/checkout/cart/paypal-express.phtml
@@ -18,24 +18,30 @@
  * @copyright Copyright (c) Buckaroo B.V.
  * @license   https://tldrlegal.com/license/mit-license
  */
-/** @var string $cspNonce */
+/** @var string $block */
+
 ?>
 <?php if ($block->canShowButton('Cart')) : ?>
-    <div class="box-tocart">
-        <div class="fieldset">
-            <div class="actions">
-                <div id="paypal-express-wrapper" data-bind="afterRender: showPaypalExpressButton"></div>
-            </div>
-        </div>
-    </div>
+<div id="paypal-express-button-component" data-bind="scope:'paypalExpress'">
+    <!-- ko template: getTemplate() --><!-- /ko -->
     <div class="buckaroo-paypal-express"></div>
-
-    <script nonce="<?= $cspNonce ?>">
-        showPaypalExpressButton = function() {
-            require(['jquery', 'buckaroo/paypal-express/pay'], function(jQuery, paypalExpressPay) {
-                paypalExpressPay.setConfig(<?= /* @noEscape */ json_encode($block->getConfig()); ?>, 'cart');
-                paypalExpressPay.init();
-            });
+    <script type="text/x-magento-init">
+        {
+            "#paypal-express-button-component": {
+                "Magento_Ui/js/core/app": {
+                    "components": {
+                        "paypalExpress": {
+                            "component":"buckaroo/paypal-express/button",
+                            "template":"Buckaroo_Magento2/catalog/product/view/paypal-express",
+                            "config": {
+                                  "data": <?= /* @noEscape */ json_encode($block->getConfig()); ?>,
+                                  "page": "cart"
+                            }
+                        }
+                    }
+                }
+            }
         }
     </script>
+</div>
 <?php endif; ?>
