--- a/view/frontend/templates/checkout/mrcash/pay.phtml
+++ b/view/frontend/templates/checkout/mrcash/pay.phtml
@@ -18,33 +18,42 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 
-/** @var string $cspNonce */
+/** @var string $block */
 ?>
 <div id="buckaroo_magento2_payconiq_loader" class="loading-mask"></div>
 
-<div id="buckaroo_magento2_payconiq_container">
+<div id="buckaroo_magento2_payconiq_container" data-bind="scope:'buckarooMrCash'">
     <div id="buckaroo_magento2_mrcash_items">
-        <p id="buckaroo_magento2_mrcash_title"><?= /* @noEscape */ __('Scan onderstaande code binnen 15 minuten met de'); ?>&nbsp;
-            <a target="_blank" href="https://www.bancontact.com/nl"><?= /* @noEscape */ __('Bancontact app'); ?></a></p>
-        <button id="buckaroo_magento2_mrcash_url" class="action-primary" type="button" style="width:100%; display: none;"><?= /* @noEscape */ __('Bancontact app'); ?></button>
+        <p id="buckaroo_magento2_mrcash_title">
+            <?= /* @noEscape */ __('Scan onderstaande code binnen 15 minuten met de'); ?>&nbsp;
+            <a target="_blank" href="https://www.bancontact.com/nl"><?= /* @noEscape */ __('Bancontact app'); ?></a>
+        </p>
+        <button id="buckaroo_magento2_mrcash_url" class="action-primary" type="button" style="width:100%; display: none;">
+            <?= /* @noEscape */ __('Bancontact app'); ?>
+        </button>
         <div id="buckaroo_magento2_mrcash_qr"></div>
 
-        <button id="buckaroo_magento2_mrcash_cancel" type="button" title="Cancel" data-bind="click: cancelPayment">
-            <span><?= /* @noEscape */ (__('Cancel')); ?></span>
+        <button id="buckaroo_magento2_mrcash_cancel"
+                type="button"
+                title="Cancel"
+                data-bind="click: cancelPayment">
+            <span><?= /* @noEscape */ __('Cancel'); ?></span>
         </button>
     </div>
 </div>
 
-<script nonce="<?= $cspNonce ?>">
-    require(['buckaroo/mrcash/pay'], function (mrcashPay) {
-        var transactionKey = "<?= /* @noEscape */ ($block->getTransactionKey()); ?>";
-
-        mrcashPay.setTransactionKey(transactionKey);
-        mrcashPay.showQrCode();
-    });
-    cancelPayment = function() {
-        require(['buckaroo/mrcash/pay'], function (mrcashPay) {
-            mrcashPay.cancelPayment();
-        });
+<!-- Use Magento's x-magento-init to create the UI component instance -->
+<script type="text/x-magento-init">
+    {
+      "#buckaroo_magento2_payconiq_container": {
+        "Magento_Ui/js/core/app": {
+          "components": {
+            "buckarooMrCash": {
+              "component": "buckaroo/mrcash/pay",
+              "transactionKey": "<?= /* @noEscape */ $block->getTransactionKey() ?>"
+        }
+      }
     }
+  }
+}
 </script>
