--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -17,31 +17,34 @@
  * @copyright Copyright (c) Buckaroo B.V.
  * @license   https://tldrlegal.com/license/mit-license
  */
-
-/** @var string $cspNonce */
+/** @var string $block */
 ?>
 <div id="buckaroo_magento2_payconiq_loader" class="loading-mask"></div>
 
-<div id="buckaroo_magento2_payconiq_container">
+<div id="buckaroo_magento2_payconiq_container" data-bind="scope:'buckarooPayconiq'">
     <div id="buckaroo_magento2_payconiq_items">
         <div id="buckaroo_magento2_payconiq_qr"></div>
 
-        <button id="buckaroo_magento2_payconiq_cancel" type="button" title="Cancel" data-bind="click: cancelPayment">
-            <span><?= /* @noEscape */ __('Cancel')?></span>
+        <button id="buckaroo_magento2_payconiq_cancel"
+                type="button"
+                title="Cancel"
+                data-bind="click: cancelPayment">
+            <span><?= __('Cancel') ?></span>
         </button>
     </div>
 </div>
 
-<script nonce="<?= $cspNonce ?>">
-    require(['buckaroo/payconiq/pay'], function (payconiqPay) {
-        var transactionKey = "<?= /* @noEscape */ $block->getTransactionKey(); ?>";
-
-        payconiqPay.setTransactionKey(transactionKey);
-        payconiqPay.showQrCode();
-    });
-    cancelPayment = function() {
-        require(['buckaroo/payconiq/pay'], function (payconiqPay) {
-            payconiqPay.cancelPayment();
-        });
+<script type="text/x-magento-init">
+    {
+        "#buckaroo_magento2_payconiq_container": {
+            "Magento_Ui/js/core/app": {
+                "components": {
+                    "buckarooPayconiq": {
+                        "component": "buckaroo/payconiq/pay",
+                        "transactionKey": "<?= /* @noEscape */ $block->getTransactionKey(); ?>"
+                }
+            }
+        }
     }
+}
 </script>
