fix applepay cart

--- a/view/frontend/templates/checkout/cart/applepay.phtml
+++ b/view/frontend/templates/checkout/cart/applepay.phtml
@@ -35,7 +35,8 @@
                 "Magento_Ui/js/core/app": {
                     "components": {
                         "buckarooApplepayCart": {
-                            "component": "buckaroo/applepay/checkout-cart"
+                            "component": "buckaroo/applepay/catalog-cart-view",
+                            "template":"Buckaroo_Magento2/checkout/cart/applepay"
                         }
                     }
                 }
