--- a/view/frontend/templates/checkout/cart/applepay.phtml
+++ b/view/frontend/templates/checkout/cart/applepay.phtml
@@ -31,7 +31,7 @@
 
     <script type="text/x-magento-init">
         {
-            "[data-bind='scope:buckarooApplepayCart']": {
+            "#apple-pay-catalog-cart-view-component": {
                 "Magento_Ui/js/core/app": {
                     "components": {
                         "buckarooApplepayCart": {
