--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -26,7 +26,7 @@
             <block class="Buckaroo\Magento2\Block\Catalog\Product\View\Applepay" name="buckaroo_magento2.product.info.applepay"
                    before="product.info.extrahint" template="Buckaroo_Magento2::catalog/product/view/applepay.phtml">
             </block>
-            <block class="Buckaroo\Magento2\Block\Checkout\Cart\Applepay" name="buckaroo_magento2.cart.info.applepay"
+            <block class="Buckaroo\Magento2\Block\Catalog\Product\View\Applepay" name="buckaroo_magento2.cart.info.applepay"
                    before="product.info.extrahint" template="Buckaroo_Magento2::checkout/cart/applepay.phtml">
             </block>
             <block class="Buckaroo\Magento2\Block\Catalog\Product\View\PaypalExpress" name="buckaroo_magento2.product.info.paypal.express"
