--- a/view/frontend/web/template/catalog/product/view/ideal-fast-checkout.html
+++ b/view/frontend/web/template/catalog/product/view/ideal-fast-checkout.html
@@ -1,4 +1,4 @@
-<div class="box-tocart">
+<div class="box-tocart buckaroo-box-to-cart">
     <div class="fieldset">
         <div class="actions">
             <div id="ideal-fast-checkout-wrapper" data-bind="afterRender: showPayButton"></div>
